Add some style experiments

--- a/assets/button.html
+++ b/assets/button.html
@@ -10,6 +10,18 @@
   --button-active-bg-color: hsl(204, 100%, 40%);
   --button-focus-border-color: hsl(204, 100%, 50%);
   --button-focus-outline-color: hsl(45, 100%, 50%);
+  --background-gradient: radial-gradient(circle at 50% 50%, hsla(0, 0%, 100%, 0.8) 10%, hsla(204, 100%, 96%, 0.4) 30%, hsla(204, 100%, 95%, 0.2) 60%, hsla(204, 100%, 92%, 0.1) 100%);
+}
+
+body {
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color:#af99ff;
+  background-image:
+  radial-gradient(at 34% 7%, hsla(271,83%,79%,1) 0px, transparent 80%),
+  radial-gradient(at 54% 92%, hsla(175,85%,62%,1) 0px, transparent 80%),
+  radial-gradient(at 41% 35%, hsla(56,99%,77%,1) 0px, transparent 80%);
 }
 
 button {
