--- a/assets/button-monochrome.html
+++ b/assets/button-monochrome.html
@@ -10,20 +10,21 @@
   --button-border-color: hsla(0, 0%, 0%, 0.5);
   --button-hover-bg-color: hsl(0, 0%, 80%);
   --button-active-bg-color: hsl(0, 0%, 60%);
-  --button-focus-outline-color: hsl(45, 100%, 50%);
     --button-shadow-color: hsla(0, 0%, 0%, 0.2);
+    --focus-outline: 3px solid hsl(45, 100%, 50%);
 }
 
 body {
     background-color: azure
 }
 
-button {
+button, input {
   background-color: var(--button-bg-color);
   border: 2px solid var(--button-border-color);
   border-radius: 6px;
   color: var(--button-text-color);
   padding: 10px 20px;
+    margin: 10px;
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
@@ -44,12 +45,22 @@ button:active {
   box-shadow: inset 0 -1px 0 hsla(0, 0%, 0%, 0.3), 0 0px 1px 0 var(--button-shadow-color);
 }
 
-button:focus-visible {
-    outline: 3px solid var(--button-focus-outline-color);
+    button:focus-visible, input:focus-visible {
+    outline: var(--focus-outline);
 }
+
+    input {
+    text-transform: none;
+    padding: 10px 10px;
+      box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 var(--button-shadow-color), inset 0 1px 4px 0 var(--button-shadow-color);
+    }
     </style>
   </head>
   <body>
     <button href="/">Click me</button>
+    <input type="text" placeholder="Enter Text" />
+    <input type="email" placeholder="Enter Email">
+    <input type="password" placeholder="Enter password">
+    <input type="datetime-local" />
   </body>
 </html>
